[project]
name = "comfyui-if_datasetmkr"
description = "Create Video datasets staright from YT or a video file path"
version = "0.1.4"
license = { file = "MIT License" }
dependencies = ["yt-dlp", "scenedetect", "python-slugify", "tqdm", "requests", "opencv-python", "qwen-vl-utils", "ffmpeg-python", "imageio_ffmpeg>=0.6.0", "moviepy>=2.1.2"]

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_DatasetMkr"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "IF_DatasetMkr"
Icon = "https://impactframes.ai/System/Icons/48x48/if.png"
